--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -1,1 +1,8 @@
-<img loading="lazy" src="{{ .Destination | safeURL }}" alt="{{ .Text }}" {{ with .Title}} title="{{ . }}" {{ end }} />
+{{ if .Title }}
+    <figure>
+        <img loading="lazy" src="{{ .Destination | safeURL }}" alt="{{ .Text }}" {{ with .Title}} title="{{ . }}" {{ end }} />
+        <figcaption>{{ .Title }}</figcaption>
+    </figure>
+{{ else }}
+    <img loading="lazy" src="{{ .Destination | safeURL }}" alt="{{ .Text }}"  {{ with .Title}} title="{{ . }}" {{ end }} />
+{{ end }}
