--- a/layouts/partials/analytics-gtag.html
+++ b/layouts/partials/analytics-gtag.html
@@ -1,9 +1,9 @@
 <!-- Global site tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ .site.Params.GoogleAnalyticsID }}"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.Params.GoogleAnalyticsID }}"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', '{{ .site.Params.GoogleAnalyticsID }}');
+    gtag('config', '{{ .Site.Params.GoogleAnalyticsID }}');
 </script>
